cabal-version:      >=1.10
name:               hangman
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:
maintainer:

-- A copyright notice.
-- copyright:
category:           Game
build-type:         Simple
extra-source-files: CHANGELOG.md

executable hangman
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16 && <4.17, ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
